--- a/shouye.html
+++ b/shouye.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/swiper.min.css">
     <!-- icon -->
     <link rel="stylesheet" href="css/iconfont.css">
+    <!-- jq -->
+    <script src="js/jquery.min.js"></script>
     <title>首页</title>
 </head>
 <body>
@@ -112,7 +114,7 @@
     <!--阴影-->
     <!-- <div class="backg"></div> -->
     <!-- 底部 -->
-    <!-- <div class="Footer">
+    <div class="Footer">
         <div class="foot">
             <img src="img/效果图13.png" alt="">
             <p style="color: #ff4400">首页</p>
@@ -133,7 +135,7 @@
             <img src="img/效果图17.png" alt="">
             <p>我的商场</p>
         </div>
-    </div> -->
+    </div>
     <!-- 商品 -->
     <!-- 标题 -->
     <div class="list">
@@ -144,16 +146,23 @@
     </div>
     <!-- 商品 -->
     <div class="shop">
-        <ul class="kuan">
+        <ul class="kuan" style="margin-bottom: .54rem">
             <li>
-                <div>
+                <div class="pic">
                     <img src="img/Pic1.png" alt="">
                 </div>
-                <div>雪纺印花百褶裙半身裙，简约的线条和版型上身很好看，整体更加有看点</div>
-                <p>￥115</p>
-                <p><span>月销62笔</span><span>免邮费</span></p>
+                <div class="wenzi">雪纺印花百褶裙半身裙，简约的线条和版型上身很好看，整体更加有看点</div>
+                <p class="pirce">￥115</p>
+                <p class="all"><span>月销62笔</span><span>免邮费</span></p>
             </li>
-            <li></li>
+            <li>
+                <div class="pic">
+                    <img src="img/Pic1.png" alt="">
+                </div>
+                <div class="wenzi">雪纺印花百褶裙半身裙，简约的线条和版型上身很好看，整体更加有看点</div>
+                <p class="pirce">￥115</p>
+                <p class="all"><span>月销62笔</span><span>免邮费</span></p>
+            </li>
         </ul>
     </div>
 <!-- 本地轮播图引入 -->
