--- a/shouye.html
+++ b/shouye.html
@@ -10,7 +10,7 @@
     <!-- icon -->
     <link rel="stylesheet" href="css/iconfont.css">
     <!-- jq -->
-    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.js"></script>
     <title>首页</title>
 </head>
 <body>
