--- a/shouye.html
+++ b/shouye.html
@@ -149,7 +149,7 @@
         <ul class="kuan" style="margin-bottom: .54rem">
             <li>
                 <div class="pic">
-                    <img src="img/Pic1.png" alt="">
+                    <!-- <img src="img/Pic1.png" alt=""> -->
                 </div>
                 <div class="wenzi">雪纺印花百褶裙半身裙，简约的线条和版型上身很好看，整体更加有看点</div>
                 <p class="pirce">￥115</p>
@@ -157,7 +157,7 @@
             </li>
             <li>
                 <div class="pic">
-                    <img src="img/Pic1.png" alt="">
+                    <!-- <img src="img/Pic1.png" alt=""> -->
                 </div>
                 <div class="wenzi">雪纺印花百褶裙半身裙，简约的线条和版型上身很好看，整体更加有看点</div>
                 <p class="pirce">￥115</p>
