--- a/shouye.html
+++ b/shouye.html
@@ -139,10 +139,10 @@
     <!-- 商品 -->
     <!-- 标题 -->
     <div class="list">
-        <p class="list1" style="color: #ff4400"><i class="iconfont">&#xe607;</i>综合排列</p>
+        <p class="list1" style="color: #ff4400"><i class="iconfont">&#xe614;</i>综合排列</p>
         <p class="list1">销量优先</p>
-        <p class="list1"><i class="iconfont">&#xe607;</i>筛选</p>
-        <p class="list2"><i class="iconfont">&#xe771;</i></p>
+        <p class="list1"><i class="iconfont">&#xe614;</i>筛选</p>
+        <p class="list2"><i class="iconfont">&#xe610;</i></p>
     </div>
     <!-- 商品 -->
     <div class="shop">
@@ -163,6 +163,22 @@
                 <p class="pirce">￥115</p>
                 <p class="all"><span>月销62笔</span><span>免邮费</span></p>
             </li>
+        </ul>
+        <ul class="heng" style="margin-bottom: .54rem">
+            <li>
+                <div class="pad">
+                    <div class="pic2">
+                        <img src="img/pic1.png" alt="">
+                    </div>
+                    <div class="all2">
+                        <p class="wenzi2">雪纺印花百褶裙半身裙，简约的线条和版型上身很好看，整体更加有看点</p>
+                        <p class="pirce2">￥115</p>
+                        <p class="all3"><span class="one1">月销62笔</span><span>免邮费</span></p>
+                    </div>
+                </div>
+                
+            </li>
+            <li></li>
         </ul>
     </div>
 <!-- 本地轮播图引入 -->
